feat: add index phase