@@ -6,8 +6,8 @@ plugins {
 group 'de.claasklar'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = JavaVersion.VERSION_19
-targetCompatibility = JavaVersion.VERSION_19
+sourceCompatibility = JavaVersion.VERSION_20
+targetCompatibility = JavaVersion.VERSION_20
 
 repositories {
 	mavenCentral()
@@ -45,6 +45,18 @@ dependencies {
 
 test {
 	useJUnitPlatform()
+}
+
+tasks.withType(JavaCompile).every {options ->
+	options.options.compilerArgs.add('--enable-preview')
+}
+
+tasks.withType(Test).every {options ->
+	options.jvmArgs(List.of('--enable-preview'))
+}
+
+tasks.withType(JavaExec).configureEach { options ->
+	options.jvmArgs(List.of('--enable-preview'))
 }
 
 spotless {
